# docs/swagger.json
@@ -8,8 +8,8 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/admin/mentor": {
-            "post": {
+        "/admin/batch/mentor": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -17,20 +17,47 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Mentor"
+                    "Admin"
                 ],
-                "summary": "更新导师信息",
+                "summary": "批量添加导师",
                 "parameters": [
                     {
-                        "description": "导师的个人信息",
-                        "name": "mentor",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/mentor.UpdateMentorService"
-                        }
+                        "type": "string",
+                        "description": "学生user_id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "导师user_id",
+                        "name": "mentor_user_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/info/me": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "根据token获取用户信息",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -61,6 +88,67 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/mentor.CreateMentorService"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/mentor/info": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mentor"
+                ],
+                "summary": "根据user_id获取导师信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "导师的user_id",
+                        "name": "user_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mentor"
+                ],
+                "summary": "更新导师信息",
+                "parameters": [
+                    {
+                        "description": "导师的个人信息",
+                        "name": "mentor",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/mentor.UpdateMentorService"
                         }
                     }
                 ],
@@ -135,6 +223,37 @@
             }
         },
         "/student/application": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Student"
+                ],
+                "summary": "学生更新个人信息",
+                "parameters": [
+                    {
+                        "description": "个人信息",
+                        "name": "student",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/student.UpdateInfoService"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -155,6 +274,36 @@
                         "schema": {
                             "$ref": "#/definitions/student.CreateApplicationService"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/student/info/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Student"
+                ],
+                "summary": "获取学生信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "学生的user_id",
+                        "name": "user_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -188,6 +337,36 @@
                         "schema": {
                             "$ref": "#/definitions/user.CreateUserService"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/apply/info": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Student"
+                ],
+                "summary": "学生获取报考信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "学生的user_id",
+                        "name": "user_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -238,6 +417,37 @@
                 }
             }
         },
+        "/user/dissolve/mentor": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "师生互选",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "学生user_id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/info/:user_id": {
             "get": {
                 "consumes": [
@@ -255,7 +465,7 @@
                         "type": "string",
                         "description": "user_id",
                         "name": "user_id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -401,7 +611,7 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "graduate_major": {
                     "type": "string"
@@ -456,7 +666,7 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "graduate_major": {
                     "type": "string"
@@ -511,7 +721,7 @@
                 "apply_school": {
                     "type": "string"
                 },
-                "isAdmitted": {
+                "is_admitted": {
                     "type": "boolean"
                 },
                 "preliminiary_result": {
@@ -521,6 +731,26 @@
                     "type": "number"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "student.UpdateInfoService": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "qq": {
+                    "type": "string"
+                },
+                "stu_id": {
+                    "type": "string"
+                },
+                "wechat": {
                     "type": "string"
                 }
             }
